# twofactor_auth

./: CMakeLists.txt  aes_generate.cpp  common-auth.EXAMPLE  encoding.cpp  encoding.h  pam_twofactor_auth.cpp  pam_twofactor_auth.h  task.txt  twofactor_auth.cpp  twofactor_auth.h
pam.d/msvs30/: system-auth.EXAMPLE
report/: build.sh  clean.sh  report.bib  report.odt  report.tex
report/additional/: plumbum's blog  Установка PSCyr под TeX Live.html
report/additional/plumbum's blog  Установка PSCyr под TeX Live_files/: 3361033517-cmt__ru.js  3659618153-comment_from_post_iframe.js  cb=gapi(1).loaded_0  comment-iframe.html  navbar.html  plusone.js  rs=AItRSTOKaD2C6zR8DJ2NrWc-_EfWHUmHPw  rs=AItRSTP3LcyIntB6JbLCBdk9412awXZaPg  sharebutton.html  uo-Ux3gxWMHxzpHbVN2f3fv-ZdYrOH9A9VmfHVgxw-0.js
report/parts/: 01_task_description.tex  02_functional_arch.tex  03_algorithm.tex  03_optimal_criteria.tex  04_decisions.tex  05_proof.tex  05_testing_method.tex  06_algorithm.tex  07_technology.tex  08_usage.tex  09_testing_method.tex  10_results.tex  11_program_description.tex
report/sty/: cp1251.csf  falg.sty  gost71u_mod.bst  rac.sty  ralg.sty  russcorr.sty
